# TITAN

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE: MIT License  LINKEDIN_POST.md  README.md  ROADMAP.md  SECURITY.md  SOCIAL_POSTS.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
crates/titan-cli/: Cargo.toml
crates/titan-cli/src/: main.rs
crates/titan-common/: Cargo.toml
crates/titan-common/src/: config.rs  lib.rs  logging.rs  path_guard.rs
crates/titan-comms/: Cargo.toml
crates/titan-comms/src/: lib.rs
crates/titan-connectors/: Cargo.toml
crates/titan-connectors/src/: lib.rs
crates/titan-connectors/tests/: phase2_connectors.rs
crates/titan-core/: Cargo.toml
crates/titan-core/src/: lib.rs
crates/titan-discord/: Cargo.toml
crates/titan-discord/src/: lib.rs
crates/titan-gateway/: Cargo.toml
crates/titan-gateway/src/: lib.rs
crates/titan-memory/: Cargo.toml
crates/titan-memory/src/: lib.rs
crates/titan-memory/tests/: approval_flow.rs  submit_goal_to_trace.rs
crates/titan-secrets/: Cargo.toml
crates/titan-secrets/src/: lib.rs
crates/titan-secrets/tests/: store.rs
crates/titan-skills/: Cargo.toml
crates/titan-skills/src/: lib.rs
crates/titan-skills/tests/: registry_v1.rs  skill_security.rs
crates/titan-tools/: Cargo.toml
crates/titan-tools/src/: lib.rs
crates/titan-web/: Cargo.toml
crates/titan-web/src/: lib.rs
docs/: API.md  GETTING_STARTED.md  INSTALL.md  KNOWN_ISSUES.md  ONBOARDING.md  SECURITY_AUDIT.md  TITAN_COMMUNICATION_INTEGRATIONS.md  architecture.md  connectors.md  first_run.md  jobs.md  openclaw_research.md  originality.md  release_checklist.md  secrets.md  skills.md  smoke_transcript.txt
packaging/homebrew/: titan.rb
packaging/winget/: README.md  TITAN.installer.yaml  TITAN.locale.en-US.yaml  TITAN.yaml
research/: COMPETITIVE_DOMINATION_ROADMAP.md
scripts/: copy-risk-check.sh  install-cli.sh  install.ps1  install.sh  release-check.sh  security-check.sh  smoke_ubuntu.sh
