[package]
name = "titan-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
reqwest.workspace = true
serde_json.workspace = true
titan-core = { path = "../titan-core" }
titan-comms = { path = "../titan-comms" }
titan-discord = { path = "../titan-discord" }
titan-memory = { path = "../titan-memory" }
titan-skills = { path = "../titan-skills" }
titan-common = { path = "../titan-common" }
titan-tools = { path = "../titan-tools" }
titan-gateway = { path = "../titan-gateway" }
tokio.workspace = true
serenity.workspace = true
titan-web = { path = "../titan-web" }

[[bin]]
name = "titan"
path = "src/main.rs"
