[package]
name = "titan-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
titan-core = { path = "../titan-core" }
titan-memory = { path = "../titan-memory" }
titan-tools = { path = "../titan-tools" }
titan-common = { path = "../titan-common" }
titan-skills = { path = "../titan-skills" }
titan-connectors = { path = "../titan-connectors" }

[dev-dependencies]
tempfile.workspace = true
