[package]
name = "titan-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
titan-core = { path = "../titan-core" }
titan-common = { path = "../titan-common" }
uuid.workspace = true
chrono.workspace = true
cron.workspace = true

[dev-dependencies]
tempfile.workspace = true
